# matterof

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: release.yml
example/: Makefile  README.md  blog-post.md  book-catalog.md  no-frontmatter.md
src/: args.rs  error.rs  lib.rs  main.rs  ops.rs  utils.rs
src/cli_bin/: args.rs  commands.rs  mod.rs
src/core/: document.rs  front_matter.rs  jsonpath.rs  key_path.rs  mod.rs  path.rs  query.rs  selector.rs  value.rs
src/io/: formatter.rs  fs.rs  mod.rs  reader.rs  resolver.rs  writer.rs
src_new/: lib.rs
src_new/cli_bin/: args.rs  commands.rs
src_new/core/: document.rs  mod.rs  query.rs  value.rs
src_new/io/: reader.rs  writer.rs
test_resc/: test_playground.md  test_playground_2.md
tests/: integration.rs  integration_tests.rs  ops_tests.rs
